--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+ font-family: "Pudelinka";
+ src: url("Fonts/pudelinka.tft") format("true type");
+ font-weight: normal;
+ font-style: normal
+{
+
 body {
       background-color: yellow;
       color: black;            
@@ -5,3 +12,14 @@ body {
       margin: 0;
       padding: 20px;
     }
+
+blockquote.q {
+  color: #D4AF37;
+  border-left: 4px solid #880000;
+  font-style: italic;
+}
+p.zz {
+   font-family: "Pudelinka";
+}   
+      
+      
